# decision-agent

./: .gitignore  ARCHITECTURE.md  README.md  architecture-diagram.html  experiment-run-schema.html  package.json  run_evaluation.py
backend/: README.md  pyproject.toml
backend/src/decision_agent/: cli.py  server.py  server_get.py  server_post.py  server_post_workers.py  server_runtime.py  settings.py
backend/src/decision_agent/modules/agents/: advocate.py  base.py  challenger.py  comparison.py  eligibility.py  evaluation.py  evidence.py  normalization.py  recommendation.py  requirement.py  state_update.py  state_validation.py
backend/src/decision_agent/modules/architectures/: conversion.py  domain_catalog.py  generic_decomposition.py  goal_structure.py  planning.py  proposal.py  proposal_validation.py  registry.py  software_scaffold_build.py  software_scaffold_workers.py  topology.py
backend/src/decision_agent/modules/contracts/: generator.py  output_validator.py  validator.py
backend/src/decision_agent/modules/decisions/: router.py  suggestions.py
backend/src/decision_agent/shared/: audit_log.py
backend/tests/: test_architecture_proposal.py  test_benchmark_config.py  test_benchmark_metrics.py  test_contract_validator.py  test_dar.py  test_decision_graph.py  test_dsc.py  test_e2e_procurement_run.py  test_e2e_sql_and_memory.py  test_layer_config.py  test_ollama_provider.py  test_output_validator.py  test_paap_score.py  test_procurement_e2e.py  test_provider_retry.py  test_runs.py  test_scheduler.py  test_worker_tools.py
case_studies/: config.json
(+176 files in other folders)
