[project]
name = "decision-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
providers = [
    "anthropic>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/decision_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
